# ShatalovIsik

./: .gitignore  .gitmodules  README.md
lr1/: README.md
lr1/src/: CMakeLists.txt  Makefile  README.md  main.cpp
lr1/src/data/: LE07_L2SP_131024_20021005_20200916_02_T1_MTL.txt
lr2/: README.md
lr2/src/: main 2.cpp  main.cpp
